<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Game"
    android:background="@drawable/radar">

    <ImageView
        android:id="@+id/ball1"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="-112dp"
        android:contentDescription="@string/progressImage"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/circles" />

    <ImageView
        android:id="@+id/ball2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="-112dp"
        android:contentDescription="@string/progressImage"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/circles" />

    <ImageView
        android:id="@+id/ball3"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="-112dp"
        android:contentDescription="@string/progressImage"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/circles" />

    <ImageView
        android:id="@+id/ball4"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="-112dp"
        android:contentDescription="@string/progressImage"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/circles" />

    <ImageView
        android:id="@+id/ball5"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="-112dp"
        android:contentDescription="@string/progressImage"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/circles" />

    <ImageView
        android:id="@+id/ball6"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="-112dp"
        android:contentDescription="@string/progressImage"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/circles" />

    <ImageView
        android:id="@+id/ball7"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="-112dp"
        android:contentDescription="@string/progressImage"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/circles" />

    <Button
        android:id="@+id/button4"
        android:layout_width="114dp"
        android:layout_height="69dp"
        android:layout_marginTop="40dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--    <TextView-->
    <!--        android:id="@+id/textView2"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="TextView"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->

    <!--    <TextView-->
    <!--        android:id="@+id/textView3"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="TextView"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/textView2" />-->

    <!--    <TextView-->
    <!--        android:id="@+id/textView4"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="TextView"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/textView3" />-->

    <!--    <TextView-->
    <!--        android:id="@+id/textView5"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="TextView"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/textView4" />-->

    <!--    <TextView-->
    <!--        android:id="@+id/textView6"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="TextView"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/textView5" />-->

    <!--    <TextView-->
    <!--        android:id="@+id/textView7"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="TextView"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/textView6" />-->

    <Button
        android:id="@+id/button5"
        android:layout_width="95dp"
        android:layout_height="84dp"
        android:backgroundTint="#dcdcdc"
        android:text="@string/founBall"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.96"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01999998"
        tools:ignore="TextContrastCheck" />

    <LinearLayout
        android:layout_width="337dp"
        android:layout_height="44dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/progress1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/progressImage"
            android:visibility="gone"
            app:srcCompat="@drawable/blackcircle" />

        <ImageView
            android:id="@+id/progress2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/progressImage"
            android:visibility="gone"
            app:srcCompat="@drawable/blackcircle" />

        <ImageView
            android:id="@+id/progress3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/progressImage"
            android:visibility="gone"
            app:srcCompat="@drawable/blackcircle" />

        <ImageView
            android:id="@+id/progress4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/progressImage"
            android:visibility="gone"
            app:srcCompat="@drawable/blackcircle" />

        <ImageView
            android:id="@+id/progress5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/progressImage"
            android:visibility="gone"
            app:srcCompat="@drawable/blackcircle" />

        <ImageView
            android:id="@+id/progress6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/progressImage"
            android:visibility="gone"
            app:srcCompat="@drawable/blackcircle" />

        <ImageView
            android:id="@+id/progress7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/progressImage"
            android:visibility="gone"
            app:srcCompat="@drawable/blackcircle" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>